# ros_control_lab

./: CMakeLists.txt  LICENSE  action_controllers_plugins.xml  package.xml
controllers_lab/: CMakeLists.txt  package.xml
example/config/: robot_controllers.yaml
example/launch/: example.launch
example/robots/: simple_robot.xacro
gazebo_examples/: CMakeLists.txt  package.xml
gazebo_examples/models/simple_base/config/: base_controller.yaml
gazebo_examples/models/simple_base/launch/: simple_base.launch
gazebo_examples/models/simple_base/robots/: simple_base.xacro
hw_interface_lab/: CMakeLists.txt  package.xml
robot_hw_lab/: CMakeLists.txt  package.xml
ros_control_lab/: CMakeLists.txt  package.xml
src/: position_controller.cpp
