<package format="2">
  <name>action_controllers</name>
  <version>0.0.1</version>

  <description>
    An action controller example
  </description>

  <maintainer email="brschettini@gmail.com">Bruno Schettini</maintainer>

  <license>MIT</license>

  <author>Bruno Schettini</author>
  
  <buildtool_depend>catkin</buildtool_depend>


  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>

  
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  

  <export>
    <!-- <controller_interface plugin="${prefix}/action_controllers.xml"/> -->
  </export>
</package>
