<?xml version="1.0"?>
<package format="2">

  <name>controllers_lab</name>
  <version>0.1.0</version>
  <description>A package for testing new controllers</description>

  <author email="brschettini@gmail.com">Bruno Schettini</author>
  <maintainer email="brschettini@gmail.com">Bruno Schettini</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
