<?xml version="1.0"?>
<package format="2">

  <name>gazebo_examples</name>
  <version>0.1.0</version>
  <description>A single package for gazebo gazebo examples</description>

  <author email="brschettini@gmail.com">Bruno Schettini</author>
  <maintainer email="brschettini@gmail.com">Bruno Schettini</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
